# api/src/models/contract/GameApiModel.ts
@@ -12,7 +12,7 @@ export class GameApiModel extends BaseEntityModel {
     public date: string,
     public map: GameMap,
     public match_id: number,
-    public included_on_standings: boolean,
+    public standings_processed: boolean,
     public started: boolean,
     public finished: boolean,
     public id?: number,
@@ -33,7 +33,7 @@ export class GameApiModel extends BaseEntityModel {
       date: new Date(this.date),
       map: this.map,
       match_id: this.match_id,
-      included_on_standings: this.included_on_standings,
+      standings_processed: this.standings_processed,
       started: this.started,
       finished: this.finished,
       stats: this.stats,
