# api/src/models/contract/MatchApiModel.ts
@@ -16,7 +16,7 @@ export class MatchApiModel extends BaseEntityModel {
     public type: MatchType,
     public team1_score: number,
     public team2_score: number,
-    public included_on_standings: boolean,
+    public standings_processed: boolean,
     public started: boolean,
     public finished: boolean,
     public winner_id?: number,
@@ -45,7 +45,7 @@ export class MatchApiModel extends BaseEntityModel {
       type: this.type,
       team1_score: this.team1_score,
       team2_score: this.team2_score,
-      included_on_standings: this.included_on_standings,
+      standings_processed: this.standings_processed,
       started: this.started,
       finished: this.finished,
       team1: this.team1?.toEntityModel(),
